--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,28 @@
 body {
   font-family: sans-serif;
   text-align: center;
-  background: #f5f5f5;
+  /* background: linear-gradient(to right, #FF7043, #FF1744); */
+  background: radial-gradient(circle, #dc8383, #ff0707);
+
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* background-image: url("../public/fondoo.png");
+   */
+}
+.main{
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-  margin-top: 2rem;
+  /* background-color: #4b8bf5; */
+}
+.img-container{
+  min-width: 50vh;
+  max-height: 50vh;
 }
 
 .bingo-card {
