--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-*{box-sizing:border-box;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;}
-body{margin:0;background:#f7fafc;color:#0f172a;}
+/* *{box-sizing:border-box;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;}
+body{margin:0;background:#0f96ef;color:#0f172a;}
 .container{max-width:900px;margin:3rem auto;padding:1rem;}
 .button{padding:8px 12px;border-radius:8px;border:none;cursor:pointer;}
 .btn-admin{background:#0ea5a4;color:white;}
@@ -8,3 +8,7 @@ body{margin:0;background:#f7fafc;color:#0f172a;}
 .grid{display:grid;grid-template-columns:repeat(5,1fr);gap:8px;max-width:360px;margin:12px 0;}
 .cell{padding:12px;background:#e2e8f0;border-radius:6px;text-align:center;}
 .cell.marked{background:#10b981;color:white;}
+
+*{
+      background-image: url("../public/fondo.png");
+} */
