--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,13 @@ body {
 
 /* Capa 2 */
 .layer:nth-child(2) {
-   background: rgba(255, 255, 255, 0.07);
+  background: rgba(255, 255, 255, 0.07);
   clip-path: polygon(96% 0%, 100% 0%, 100% 94%, 0.5% 41.5%);
 }
 
 /* Capa 3 */
 .layer:nth-child(3) {
-   background: rgba(255, 255, 255, 0.05);
+  background: rgba(255, 255, 255, 0.05);
   clip-path: polygon(0% 41%, 0% 100%, 100% 100%, 100% 94%);
 }
 
@@ -56,9 +56,11 @@ body {
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
@@ -133,8 +135,8 @@ body {
   transition: 0.2s ease all;
 }
 
-.wave-group .input:focus ~ .label,
-.wave-group .input:valid ~ .label {
+.wave-group .input:focus~.label,
+.wave-group .input:valid~.label {
   top: -10px;
   font-size: 13px;
   color: #c40b0b;
@@ -189,14 +191,28 @@ body {
 @media (max-width: 900px) {
   .main {
     flex-direction: column;
+    height: 100vh;
+    display: flex;
+    background: linear-gradient(135deg, #8b0000, #c21807, #ff3b3b);
   }
 
   .left-main {
-    height: 35vh;
+    display: none;
   }
 
   .right-main {
-    height: 65vh;
+    background-color: #ffffff;
+    border-radius: 30px;
+    width: 100%;
+    max-width: 50vw;
+
+    min-height: 90vh;
+    flex: 0 0;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
 
   .text-main {
@@ -208,6 +224,33 @@ body {
   }
 
   .btn {
-    width: 80%;
+    width: 100%;
+  }
+}
+
+
+
+@media (max-width: 400px) {
+
+  .right-main {
+    border-radius: 30px;
+    max-width: 70vw;
+    min-height: 90vh;
+    flex: 0 0;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .text-main {
+    font-size: 1.5rem;
+  }
+
+  .Buttons {
+    flex-direction: column;
+  }
+
+  .btn {
+    width: 100%;
   }
 }
