--- a/src/index.css
+++ b/src/index.css
@@ -231,8 +231,9 @@ body {
 
 
 @media (max-width: 400px) {
+
   .main {
-    height: 70%;
+    height: auto;
     }
   .right-main {
     border-radius: 30px;
