--- a/src/index copy.css
+++ b/src/index copy.css
@@ -70,15 +70,22 @@ body {
 }
 
 
-.container {
+/* .container {
   min-height: 80vh;
-  /* background-color: #4b8bf5; */
+} */
+ .container {
+  width: 80%;
+  max-width: 500px;
+  text-align: center;
 }
 
 .img-container{
   max-height: 50vh;
   width: 75%;
+  margin-bottom: 1rem;
 }
+
+
 
 .bingo-card {
   display: inline-block;
